deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golinks-deployment
  labels:
    app: golinks-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: golinks-deployment
  template:
    metadata:
      labels:
        app: golinks-deployment
    spec:
      containers:
      - name: golinks
        image: ghcr.io/karlcaga/go-psql-golinks:main
        ports:
        - containerPort: 8080
