service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golinks
  labels:
    app: golinks
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: golinks-deployment
